add-swagger-api-search-rental
